# country_administrative_divisions

./: 01. File Organization and How to Upload Data.md  README.md  pyproject.toml
country_administrative_divisions/: hooks.py  modules.txt
country_administrative_divisions/country_administrative_divisions/doctype/admin_division_level_2_districts_county_city_town/: admin_division_level_2_districts_county_city_town.js  admin_division_level_2_districts_county_city_town.json  admin_division_level_2_districts_county_city_town.py  test_admin_division_level_2_districts_county_city_town.py
country_administrative_divisions/country_administrative_divisions/doctype/admin_level_1_province_region_state/: admin_level_1_province_region_state.js  admin_level_1_province_region_state.json  admin_level_1_province_region_state.py  test_admin_level_1_province_region_state.py
country_administrative_divisions/fixtures/: admin_division_level_2_districts_county_city_town.json  admin_level_1_province_region_state.json
country_administrative_divisions/utils/: import_admin_divisions.py
